--- a/aprendiendo-grid/index.html
+++ b/aprendiendo-grid/index.html
@@ -10,6 +10,108 @@
 </head>
 
 <body>
+
+    <!--CABECERA (arriba del todo y ocupe el 100%)
+            TITULO
+        MENU (debajo de la cabecera y ocupa el 100%)
+        CONTENIDO(debajo del menu y al lado de lateral)
+        LATERAL(debajo el menu y a la derecha del contenido)
+        FOOTER(abajo del todo y ocupe el 100%)    
+    -->
+
+    <div id="website-areas">
+        <header id="cabecera">
+            <h1>WEB CON ÁREAS</h1>
+        </header>
+
+        <nav id="menu">
+            <ul>
+                <li><a href="#">Inicio</a></li>
+                <li><a href="#">Página 1</a></li>
+                <li><a href="#">Página 2</a></li>
+                <li><a href="#">Página 3</a></li>
+                <li><a href="#">Contacto</a></li>
+            </ul>
+        </nav>
+
+        <section id="contenido">
+            <article>
+                Articulo 1
+            </article>
+            <article>
+                Articulo 2
+            </article>
+            <article>
+                Articulo 3
+            </article>
+            <article>
+                Articulo 4
+            </article>
+            <article>
+                Articulo 5
+            </article>
+        </section>
+
+        <aside id="lateral">
+            <h2>Barra Lateral</h2>
+        </aside>
+
+        <footer id="pie-pagina">
+            Máster en CSS - Grid  &copy;
+        </footer>
+    </div>
+
+
+
+    <br><br><br><br><br>
+    <hr/>
+
+    <div id="website">
+        <header id="cabecera">
+            <h1>Titulo de mi Web</h1>
+        </header>
+
+        <nav id="menu">
+            <ul>
+                <li><a href="#">Inicio</a></li>
+                <li><a href="#">Página 1</a></li>
+                <li><a href="#">Página 2</a></li>
+                <li><a href="#">Página 3</a></li>
+                <li><a href="#">Contacto</a></li>
+            </ul>
+        </nav>
+
+        <section id="contenido">
+            <article>
+                Articulo 1
+            </article>
+            <article>
+                Articulo 2
+            </article>
+            <article>
+                Articulo 3
+            </article>
+            <article>
+                Articulo 4
+            </article>
+            <article>
+                Articulo 5
+            </article>
+        </section>
+
+        <aside id="lateral">
+            <h2>Barra Lateral</h2>
+        </aside>
+
+        <footer id="pie-pagina">
+            Máster en CSS - Grid  &copy;
+        </footer>
+
+
+    </div>
+
+
+    <hr/>
     <h1>CSS Grid Layout</h1>
     <h2>Hoy aprendemos CSS Grid Layout una nueva forma de maquetar</h2>
 
