--- a/aprendiendo-bootstrap/index.html
+++ b/aprendiendo-bootstrap/index.html
@@ -60,7 +60,7 @@
                                 <div class="item col-3 bg-primary">Producto</div>
                                 <div class="item col-3 bg-warning">Producto</div>
                                 <div class="item col-3 bg-primary">Producto</div>
-                                 
+
                             </div>
 
 
@@ -69,8 +69,10 @@
 
                     <aside class="col-3 border">
                         <h2>Barra Lateral</h2>
-                        <div class="lateral row bg-light">
-
+                        <div class="lateral row bg-light align-items-center">
+                            <div class="col-4 bg-primary align-self-start">Elemento 1</div>
+                            <div class="col-4 bg-success align-self-center">Elemento 2</div>
+                            <div class="col-4 bg-warning align-self-end">Elemento 3</div>
                         </div>
                     </aside>
                 </div>
