--- a/aprendiendo-bootstrap/index.html
+++ b/aprendiendo-bootstrap/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, user-scalable=no">
     <title>Aprendiendo BootStrap</title>
     <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="styles.css">
@@ -25,22 +25,29 @@
                 <h1>Aprendiendo BootStrap</h1>
             </header>
 
-            <nav id="menu" class="col-12 bg-secondary text-white">
+            <nav id="menu" class="col-12 bg-secondary text-white 
+                                d-none d-sm-none d-md-block">
                 <ul class="row w-50">
-                    <li class="col">Inicio</li>
-                    <li class="col">Página 1</li>
-                    <li class="col">Página 2</li>
-                    <li class="col">Página 3</li>
-                    <li class="col">Contacto</li>
+                    <li class="col-xs-12 col-sm-12 col-md">Inicio</li>
+                    <li class="col-xs-12 col-sm-12 col-md">Página 1</li>
+                    <li class="col-xs-12 col-sm-12 col-md">Página 2</li>
+                    <li class="col-xs-12 col-sm-12 col-md">Página 3</li>
+                    <li class="col-xs-12 col-sm-12 col-md">Contacto</li>
                 </ul>
             </nav>
 
-            <section id="content" class="col-12">
+            <section id="content" class="col-12 border">
                 <div class="row">
-                    <section id="products" class="col-9 border">
+                    <section id="products" class="col-12 col-sm-12 col-md-9 border">
                         <h2>Productos</h2>
                         <hr>
                         <div class="items">
+
+                            <div class="row">
+                                <div class="item col col-lg col-md-12 col-sm-12 bg-primary">Producto</div>
+                                <div class="item col col-lg col-md-6 col-sm-6 bg-warning">Producto</div>
+                                <div class="item col col-lg col-md-6 col-sm-6 bg-danger">Producto</div>
+                            </div>
 
                             <div class="row">
                                 <div class="item col bg-primary m-2">Producto</div>
@@ -60,19 +67,24 @@
                                 <div class="item col-3 bg-primary">Producto</div>
                                 <div class="item col-3 bg-warning">Producto</div>
                                 <div class="item col-3 bg-primary">Producto</div>
-
                             </div>
 
+                            <div class="row">
+                                <div class="item col-2 bg-primary offset-1">Producto</div>
+                                <div class="item col-2 bg-warning offset-1">Producto</div>
+                                <div class="item col-2 bg-danger offset-1">Producto</div>
+                                <div class="item col-2 bg-danger offset-1">Producto</div>
+                            </div>
 
                         </div>
                     </section>
 
-                    <aside class="col-3 border">
+                    <aside class="col-3 border d-none d-sm-none d-md-block">
                         <h2>Barra Lateral</h2>
-                        <div class="lateral row bg-light align-items-center">
-                            <div class="col-4 bg-primary align-self-start">Elemento 1</div>
-                            <div class="col-4 bg-success align-self-center">Elemento 2</div>
-                            <div class="col-4 bg-warning align-self-end">Elemento 3</div>
+                        <div class="lateral row bg-light ">
+                            <div class="col-4 bg-primary order-3">Elemento 1</div>
+                            <div class="col-4 bg-success order-1">Elemento 2</div>
+                            <div class="col-4 bg-warning order-2">Elemento 3</div>
                         </div>
                     </aside>
                 </div>
