--- a/aprendiendo-bootstrap/componentes.html
+++ b/aprendiendo-bootstrap/componentes.html
@@ -1,12 +1,172 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Componentes Bootstrap</title>
+    <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="styles1.css">
 </head>
+
 <body>
-    
+    <div class="container">
+        <!-- BARRA DE NAVEGACION -->
+        <div class="row">
+            <header class="col-md-12 mt-2">
+
+                <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+                    <div class="container-fluid">
+                        <a class="navbar-brand" href="#">COMPONENTES</a>
+
+                        <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                            aria-expanded="false" aria-label="Toggle navigation">
+                            <span class="navbar-toggler-icon"></span>
+                        </button>
+                        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                                <li class="nav-item">
+                                    <a class="nav-link active" aria-current="page" href="#">Home</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="#">Link</a>
+                                </li>
+                                <li class="nav-item dropdown">
+                                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                                        data-bs-toggle="dropdown" aria-expanded="false">
+                                        Dropdown
+                                    </a>
+                                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                        <li><a class="dropdown-item" href="#">Action</a></li>
+                                        <li><a class="dropdown-item" href="#">Another action</a></li>
+                                        <li>
+                                            <hr class="dropdown-divider">
+                                        </li>
+                                        <li><a class="dropdown-item" href="#">Something else here</a></li>
+                                    </ul>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link disabled" href="#" tabindex="-1"
+                                        aria-disabled="true">Disabled</a>
+                                </li>
+                                <li class="nav-item">
+                                    <form class="d-flex">
+                                        <input class="form-control me-2" type="search" placeholder="Search"
+                                            aria-label="Search">
+                                        <button class="btn btn-outline-success" type="submit">Search</button>
+                                    </form>
+                                </li>
+                            </ul>
+
+
+                            <ul class="navbar-nav">
+                                <li class="nav-item dropdown">
+                                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                                        data-bs-toggle="dropdown" aria-expanded="false">
+                                        MSQ
+                                    </a>
+                                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                        <li><a class="dropdown-item" href="#">Manuel</a></li>
+                                        <li><a class="dropdown-item" href="#">Alejandro</a></li>
+                                        <li>
+                                            <hr class="dropdown-divider">
+                                        </li>
+                                        <li><a class="dropdown-item" href="#">Silva</a></li>
+                                        <li><a class="dropdown-item" href="#">Quispe</a></li>
+                                    </ul>
+                                </li>
+
+                            </ul>
+                        </div>
+                    </div>
+                </nav>
+            </header>
+        </div>
+        <!-- FIN BARRA DE NAVEGACION -->
+        <!-- ALERTAS -->
+        <div class="row">
+            <div class="col-md-8 mt-3">
+
+                <!-- Breadcrumb -->
+                <nav aria-label="breadcrumb">
+                    <ol class="breadcrumb">
+                        <li class="breadcrumb-item"><a href="#">Inicio</a></li>
+                        <li class="breadcrumb-item"><a href="#">Desarrollo Web</a></li>
+                        <li class="breadcrumb-item"><a href="#">Componentes Bootstrap</a></li>
+                    </ol>
+                </nav>
+                <!-- fin Breadcrumb -->
+
+                <div class="alert alert-danger alert-dismissible fade show" role="alert">
+                    <strong>Increíble</strong> te has registrado correctamente!!! =)
+                    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close">
+                    </button>
+                </div>
+
+                <!-- badge -->
+                <h2>
+                    <span class="badge bg-success">
+                        Nuevo
+                    </span>
+                    Componentes de Bootstrap
+                </h2>
+
+                <p>
+                    <!-- <a href="#" class="badge bg-danger rounded-pill"> -->
+                    <a href="#">
+                        <span class="badge bg-danger rounded-pill">
+                            Articulo Nuevo
+                        </span>
+                    </a>
+                </p>
+                <!-- fin badge -->
+            </div>
+        </div>
+        <!-- FIN ALERTAS -->
+        <!-- card -->
+        <div class="row col-md-8">
+
+            <div class="card col p-0 mr-3">
+                <img class="card-img-top img-fluid" src="https://via.placeholder.com/300x200">
+                <div id="card-body">
+                    <h3 class="card-title">Tarjeta 1</h3>
+                    <p class="card-text">
+                        Hola , entra a este articulo para bootstrap
+                    </p>
+                    <a href="#" class="btn btn-warning">Entrar</a>
+                </div>
+            </div>
+
+            <div class="card col p-0 mr-3">
+                <img class="card-img-top img-fluid" src="https://via.placeholder.com/300x200">
+                <div id="card-body">
+                    <h3 class="card-title">Tarjeta 2</h3>
+                    <p class="card-text">
+                        Hola , entra a este articulo para bootstrap
+                    </p>
+                    <a href="#" class="btn btn-success">Entrar</a>
+                </div>
+            </div>
+
+            <div class="card col p-0 mr-3">
+                <img class="card-img-top img-fluid" src="https://via.placeholder.com/300x200">
+                <div id="card-body">
+                    <h3 class="card-title">Tarjeta 3</h3>
+                    <p class="card-text">
+                        Hola , entra a este articulo para bootstrap
+                    </p>
+                    <a href="#" class="btn btn-info">Entrar</a>
+                </div>
+            </div>
+ 
+        </div>
+        <!-- fin card -->
+    </div>
+    <script type="text/javascript" src="jquery/jquery-3.6.0.min.js"></script>
+    <script type="text/javascript" src="bootstrap/js/bootstrap.min.js"></script>
+
 </body>
+
 </html>
