--- a/aprendiendo-bootstrap/componentes.html
+++ b/aprendiendo-bootstrap/componentes.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Componentes Bootstrap</title>
     <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" href="styles1.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
@@ -97,76 +97,163 @@
                         <li class="breadcrumb-item"><a href="#">Componentes Bootstrap</a></li>
                     </ol>
                 </nav>
-                <!-- fin Breadcrumb -->
 
-                <div class="alert alert-danger alert-dismissible fade show" role="alert">
-                    <strong>Increíble</strong> te has registrado correctamente!!! =)
-                    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close">
-                    </button>
-                </div>
+                <!-- slider -->
 
-                <!-- badge -->
-                <h2>
-                    <span class="badge bg-success">
-                        Nuevo
-                    </span>
-                    Componentes de Bootstrap
-                </h2>
+                <div id="slider" class="carousel slide mb-3" data-ride="carousel">
 
-                <p>
-                    <!-- <a href="#" class="badge bg-danger rounded-pill"> -->
-                    <a href="#">
-                        <span class="badge bg-danger rounded-pill">
-                            Articulo Nuevo
+                    <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+                        <div class="carousel-indicators">
+                            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0"
+                                class="active" aria-current="true" aria-label="Slide 1"></button>
+                            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
+                                aria-label="Slide 2"></button>
+                            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
+                                aria-label="Slide 3"></button>
+                        </div>
+
+
+                        <div class="carousel-inner">
+                            <div class="carousel-item active">
+                                <img class="d-block w-100" src="https://via.placeholder.com/900x350?text=PRIMERA">
+
+                                <div class="carousel-caption d-none d-md-block">
+                                    <h5>1 slide label</h5>
+                                    <p>Some representative placeholder content for the third slide 1.</p>
+                                </div>
+
+                            </div>
+
+                            <div class="carousel-item">
+                                <img class="d-block w-100" src="https://via.placeholder.com/900x350?text=SEGUNDA">
+
+                                <div class="carousel-caption d-none d-md-block">
+                                    <h5>2 slide label</h5>
+                                    <p>Some representative placeholder content for the third slide 2.</p>
+                                </div>
+
+                            </div>
+
+                            <div class="carousel-item">
+                                <img class="d-block w-100" src="https://via.placeholder.com/900x350?text=TERCERA">
+
+                                <div class="carousel-caption d-none d-md-block">
+                                    <h5>3 slide label</h5>
+                                    <p>Some representative placeholder content for the third slide 3.</p>
+                                </div>
+
+                            </div>
+
+                        </div>
+
+                        <a class="carousel-control-prev" href="#slider" role="button" data-bs-slide="prev">
+                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                            <span class="visually-hidden">Anterior</span>
+                        </a>
+
+                        <a class="carousel-control-next" href="#slider" role="button" data-bs-slide="next">
+                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                            <span class="visually-hidden">Siguiente</span>
+                        </a>
+
+
+                    </div>
+                    <!-- fin slider -->
+
+                    <!-- fin Breadcrumb -->
+                    <div class="alert alert-danger alert-dismissible fade show" role="alert">
+                        <strong>Increíble</strong> te has registrado correctamente!!! =)
+                        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close">
+                        </button>
+                    </div>
+
+                    <!-- badge -->
+                    <h2>
+                        <span class="badge bg-success">
+                            Nuevo
                         </span>
-                    </a>
-                </p>
-                <!-- fin badge -->
+                        Componentes de Bootstrap
+                    </h2>
+
+                    <p>
+                        <!-- <a href="#" class="badge bg-danger rounded-pill"> -->
+                        Esta es una clase sobe uso de badges en bootstrap
+                        <a href="#">
+                            <span class="badge bg-danger rounded-pill">
+                                Articulo Nuevo
+                            </span>
+                        </a>
+                    </p>
+                    <!-- fin badge -->
+                </div>
+            </div>
+
+            <!-- FIN ALERTAS -->
+            <!-- card -->
+            <div class="row col-md-8">
+
+                <div class="card col p-0 mr-3">
+                    <img class="card-img-top img-fluid" src="https://via.placeholder.com/300x200">
+                    <div id="card-body">
+                        <h3 class="card-title">Tarjeta 1</h3>
+                        <p class="card-text">
+                            Hola , entra a este articulo para bootstrap
+                        </p>
+                        <a href="#" class="btn btn-warning">Entrar</a>
+                    </div>
+                </div>
+
+                <div class="card col p-0 mr-3">
+                    <img class="card-img-top img-fluid" src="https://via.placeholder.com/300x200">
+                    <div id="card-body">
+                        <h3 class="card-title">Tarjeta 2</h3>
+                        <p class="card-text">
+                            Hola , entra a este articulo para bootstrap
+                        </p>
+                        <a href="#" class="btn btn-success">Entrar</a>
+                    </div>
+                </div>
+
+                <div class="card col p-0 mr-3">
+                    <img class="card-img-top img-fluid" src="https://via.placeholder.com/300x200">
+                    <div id="card-body">
+                        <h3 class="card-title">Tarjeta 3</h3>
+                        <p class="card-text">
+                            Hola , entra a este articulo para bootstrap
+                        </p>
+                        <a href="#" class="btn btn-info">Entrar</a>
+                    </div>
+                </div>
+
+            </div>
+            <!-- fin card -->
+            <div class="row">
+
+                <!-- Jumbotron -->
+
+                <div class="col-md-4">
+                    <div class="jumbotron my-3">
+                        <h1 class="display-6">Bienvenido a mi web</h1>
+                        <p class="lead">Esto es un Jumbotron en bootstrap</p>
+                        <hr class="my-2" />
+                        <p>Identificate en la web</p>
+                        <a href="#" class="btn btn-primary btn-xs" role="button">
+                            Login
+                        </a>
+                    </div>
+                </div>
+                <!-- fin Jumbotron -->
             </div>
         </div>
-        <!-- FIN ALERTAS -->
-        <!-- card -->
-        <div class="row col-md-8">
-
-            <div class="card col p-0 mr-3">
-                <img class="card-img-top img-fluid" src="https://via.placeholder.com/300x200">
-                <div id="card-body">
-                    <h3 class="card-title">Tarjeta 1</h3>
-                    <p class="card-text">
-                        Hola , entra a este articulo para bootstrap
-                    </p>
-                    <a href="#" class="btn btn-warning">Entrar</a>
-                </div>
-            </div>
-
-            <div class="card col p-0 mr-3">
-                <img class="card-img-top img-fluid" src="https://via.placeholder.com/300x200">
-                <div id="card-body">
-                    <h3 class="card-title">Tarjeta 2</h3>
-                    <p class="card-text">
-                        Hola , entra a este articulo para bootstrap
-                    </p>
-                    <a href="#" class="btn btn-success">Entrar</a>
-                </div>
-            </div>
-
-            <div class="card col p-0 mr-3">
-                <img class="card-img-top img-fluid" src="https://via.placeholder.com/300x200">
-                <div id="card-body">
-                    <h3 class="card-title">Tarjeta 3</h3>
-                    <p class="card-text">
-                        Hola , entra a este articulo para bootstrap
-                    </p>
-                    <a href="#" class="btn btn-info">Entrar</a>
-                </div>
-            </div>
- 
-        </div>
-        <!-- fin card -->
-    </div>
-    <script type="text/javascript" src="jquery/jquery-3.6.0.min.js"></script>
-    <script type="text/javascript" src="bootstrap/js/bootstrap.min.js"></script>
-
+        <script type="text/javascript" src="jquery/jquery-3.6.0.min.js"></script>
+        <script type="text/javascript" src="bootstrap/js/bootstrap.min.js"></script>
+        <script>
+            $(document).ready(function () {
+                $(".carousel").carousel({
+                    interval: 3000
+                });
+            });
+        </script>
 </body>
 
 </html>
