--- a/aprendiendo-bootstrap/componentes.html
+++ b/aprendiendo-bootstrap/componentes.html
@@ -188,6 +188,57 @@
                 </div>
             </div>
 
+
+            <div class="col-md-4">
+                <!-- Button trigger modal -->
+                <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
+                    Lanzar ventana
+                </button>
+
+                <!-- Modal -->
+                <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
+                    aria-hidden="true">
+                    <div class="modal-dialog">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h5 class="modal-title" id="exampleModalLabel">¿Quieres ver la ventana?</h5>
+                                <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                    aria-label="Close"></button>
+                            </div>
+                            <div class="modal-body">
+                                Hola ctv.......
+                            </div>
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
+                                <button type="button" class="btn btn-primary">Guardar</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="row">
+
+                <!-- paginacion -->
+                <nav aria-label="navigation" class="m-3">
+                    <ul class="pagination">
+                        <li class="page-item"><a href="#" class="page-link">&laquo;</a></li>
+                        <li class="page-item"><a href="#" class="page-link">1</a></li>
+                        <li class="page-item"><a href="#" class="page-link">2</a></li>
+                        <li class="page-item"><a href="#" class="page-link">3</a></li>
+                        <li class="page-item"><a href="#" class="page-link">4</a></li>
+                        <li class="page-item"><a href="#" class="page-link">5</a></li>
+                        <li class="page-item"><a href="#" class="page-link">&raquo;</a></li>
+                    </ul>
+                </nav>
+                <!-- fin paginacion -->
+
+            </div>
+
+
+
+
+
             <!-- FIN ALERTAS -->
             <!-- card -->
             <div class="row col-md-8">
@@ -224,9 +275,9 @@
                         <a href="#" class="btn btn-info">Entrar</a>
                     </div>
                 </div>
-
             </div>
             <!-- fin card -->
+
             <div class="row">
 
                 <!-- Jumbotron -->
